k8s/config/gateway-infra/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: custom-proxy-config
    namespace: gateway-infra
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: gateway-infra
spec:
  gatewayClassName: eg
  listeners:
    - name: http-wildcard
      protocol: HTTP
      port: 80
      hostname: "*.arffornia.com"
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              prod-gateway-access: "true"
